moved old portfolio site over to this Rails app

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,12 +2,23 @@ doctype html
 html
   head
     meta[name="viewport" content="width=device-width, initial-scale=1.0"]
+    meta[charset="utf-8"]
+    meta[ http-equiv="X-UA-Compatible" content="IE=edge"]
+
     title
       = content_for?(:title) ? yield(:title) : 'Profile'
     meta name="description" content="#{content_for?(:description) ? yield(:description) : 'Profile'}"
+    meta name="author" content=""
     == stylesheet_link_tag "application", :media => 'all', 'data-turbolinks-track' => true
+
+    / loading the Stylish-Portfolio CSS
+
+    == stylesheet_link_tag "stylish-portfolio", :media => 'all', 'data-turbolinks-track' => true
     == javascript_include_tag 'application', 'data-turbolinks-track' => true
     == csrf_meta_tags
+    == stylesheet_link_tag "font-awesome/font-awesome.min.css", :type => 'text/css'
+    == stylesheet_link_tag "http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic"
+
   body
     header
       == render 'layouts/navigation'
