fixed off-color menu buttons

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,3 +3,11 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import 'stylish-portfolio';
+
+.navbar{
+  background-color: black;
+}
+
+.i{
+  background-color: black;
+}
