revised text based on my changes to the static website

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
         <div class="text-vertical-center">
             <h1>Michael E. Nash</h1>
             <h2>（許書聖）</h2>
-            <h3>Ruby on Rails Developer</h3>
+            <h3>Integration Developer</h3>
             <br>
             <a href="#contact" class="btn btn-dark btn-lg">Contact Me</a>
             <br>
@@ -12,24 +12,24 @@
     </header>
 
 
-    <!-- About -->
     <section id="about" class="about">
         <div class="container">
             <div class="row">
-              <%= image_tag 'callout.jpg', class: "img-responsive profile"%>
+              <img class="img-responsive profile" src="img/callout.jpg">
             <div class="row">
                 <div class="col-lg-12 text-left">
-                    <h2>I am a Ruby on Rails developer.</h2>
-                    <p class="lead">I am a recent graduate of The Iron Yard St Petersburg’s Ruby on Rails program. I am also a former academic, with an MA in Chinese History from Columbia and years of travel and language experience around Asia.</p>
-                    <p class="lead">My current projects include (but are not limited to) developing a series of Rails
-                        engines as a supplement to rails composer, working through the problems on the Euler Project, working through the Learnynode program to learn Node.js, and and learning the basics of Python.</p>
+                    <h2>I am an integration developer at the Tampa office of <a href='https://www.investcloud.com/Membership/Apps/ICBB2WhoWeAre_Input_App.aspx?IX_mId=0'>investCloud</a>.</h2>
+                    <p class="lead">I am a graduate of The Iron Yard St Petersburg’s Ruby on Rails program. I am also a former academic, with an MA in Chinese History from Columbia and years of travel and language experience around Asia.</p>
+                    <p class="lead"> Professionally, I work on databases and write scripts that manipulate data and load it into a database for financial services web portals in Java and Groovy.
+                      My personal projects include converting this page and my blog into a Rails app, working through the problems on<a href='https://exercism.io'> exercism</a>, and learning the details of Cucumber and Rspec.
+                      I am also working on a suite of csv parsing tools in Python called <a href='https://github.com/utumno86/Asparagus'>Asparagus</a>.
                     <p>Programming Languages:</p>
                     <ul>
                         <li><a href='https://github.com/utumno86/Programs/blob/master/eight.rb'>Ruby</a></li>
                           <ul>
                             <li>Rails (see examples below)</li>
                             <li><a href='https://github.com/utumno86/CreamOfTheCrop/blob/master/app/views/wrestlers/index.slim'>Slim/Haml</a></li>
-                            <li><a href='https://github.com/utumno86/RspecTutorial'>RSpec</a></li>
+                            <li><a href='https://github.com/utumno86/the_rspec_book/blob/master/code_breaker/spec/marker_spec.rb'>RSpec</a></li>
                             <li>JSON APIs</li>
                           </ul>
                         <li><a href='https://github.com/utumno86/exercism_exercises/blob/master/javascript/anagram/anagram.js'>Javascript</a></li>
@@ -38,7 +38,7 @@
                             <li><a href='https://github.com/utumno86/LearnYouNode/blob/master/juggling.js'>Node.js</a></li>
                             <li>Angular JS</li>
                           </ul>
-                        <li><a href='https://github.com/utumno86/Pythoncoursera/blob/master/dictionaries.py'>Python</a></li>
+                        <li><a href='https://github.com/utumno86/Asparagus/blob/master/nameeraserconverter.py'>Python</a></li>
                           <ul>
                             <li><a href='https://github.com/utumno86/testing'>django</a></li>
                           </ul>
@@ -48,15 +48,18 @@
                             <li><a href='https://github.com/utumno86/bloggertron/blob/master/app/views/posts/index.html.erb'> Zurb Foundation</a></li>
                             <li><a href='https://github.com/utumno86/CreamOfTheCrop/blob/master/app/assets/stylesheets/application.css.scss'> Sass/SCSS</a></li>
                           </ul>
+                        <li>Java</li>
+                          <ul>
+                            <li>Groovy</li>
+                          </ul>
                     </ul>
-                    <p>I am also proficient in SQL databases (notably PostgreSQL), Git, deployment to Heroku, as well as in Chinese langauge, history, and economics topics.</p>
+                    <p>I am also proficient in SQL, using Oracle and Postgres databases, Git, deployment to Heroku, as well as in Chinese langauge, history, and economics topics.</p>
                 </div>
             </div>
             <!-- /.row -->
         </div>
         <!-- /.container -->
     </section>
-
     <!-- Portfolio -->
     <section id="portfolio" class="portfolio">
         <div class="container">
