replaced the image classes with the correct rails version

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,7 @@
     <section id="about" class="about">
         <div class="container">
             <div class="row">
-              <img class="img-responsive profile" src="img/callout.jpg">
+              <%= image_tag 'callout.jpg', class: "img-responsive profile"%>
             <div class="row">
                 <div class="col-lg-12 text-left">
                     <h2>I am an integration developer at the Tampa office of <a href='https://www.investcloud.com/Membership/Apps/ICBB2WhoWeAre_Input_App.aspx?IX_mId=0'>investCloud</a>.</h2>
