--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,14 +1,18 @@
-<div class="authform">
-  <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-    <h3>Change your password</h3>
-    <%= devise_error_messages! %>
-    <%= f.hidden_field :reset_password_token %>
-    <div class="form-group">
-      <%= f.label :password, 'New password' %>
-        <%= f.password_field :password, autofocus: true, autocomplete: 'off', class: 'form-control' %>
-      <%= f.label :password_confirmation, 'Confirm new password' %>
-        <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control' %>
-    </div>
-     <%= f.submit 'Change my Password', :class => 'button right' %>
-  <% end %>
+<div class="row">
+  <div class="col-sm-6 col-sm-offset-3">
+    <div class="authform">
+      <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
+      <h3>Change your password</h3>
+      <%= devise_error_messages! %>
+      <%= f.hidden_field :reset_password_token %>
+      <div class="form-group">
+        <%= f.label :password, 'New password' %>
+          <%= f.password_field :password, autofocus: true, autocomplete: 'off', class: 'form-control' %>
+        <%= f.label :password_confirmation, 'Confirm new password' %>
+          <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control' %>
+      </div>
+     <%= f.submit 'Change my Password', :class =>'btn btn-large btn-primary button right' %>
+     <% end %>
+  </div>
+ </div>
 </div>
