altered the rest to make them look prettier

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,16 @@
-<div class="authform">
-  <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post, :role => 'form'}) do |f| %>
-    <h3>Forgot your password?</h3>
-    <p>We'll send password reset instructions.</p>
-    <%= devise_error_messages! %>
-    <div class="form-group">
-      <%= f.label :email %>
-      <%= f.email_field :email, :autofocus => true, class: 'form-control' %>
+<div class="row">
+  <div class="col-sm-6 col-sm-offset-3">
+    <div class="authform">
+      <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post, :role => 'form'}) do |f| %>
+      <h3>Forgot your password?</h3>
+      <p>We'll send password reset instructions.</p>
+      <%= devise_error_messages! %>
+      <div class="form-group">
+        <%= f.label :email %>
+        <%= f.email_field :email, :autofocus => true, class: 'form-control' %>
+      </div>
+      <%= f.submit 'Reset Password', :class => 'btn btn-large btn-primary button right' %>
+      <% end %>
     </div>
-     <%= f.submit 'Reset Password', :class => 'button right' %>
-  <% end %>
-</div>
+  </div>
+</div
