reconfigured some of the color changes

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,7 +20,7 @@
         <%= f.label :password_confirmation %>
         <%= f.password_field :password_confirmation, class: 'form-control' %>
       </div>
-      <%= f.submit 'Sign up', :class => 'btn btn-large btn-primary button right' %>
+      <%= f.submit 'Sign up', :class => 'btn btn-large btn-success button right' %>
       <% end %>
     </div>
   </div>
