fixed error messages and top background

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,6 +8,20 @@
   background-color: black;
 }
 
+.wrapper {
+  margin-top: 51px;
+}
+
 .i{
   background-color: black;
+}
+
+#top{
+  height: 707px;
+}
+
+#error_explanation {
+  border: 1px solid red;
+  height: 50px;
+  width: 100%;
 }
