--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,5 +16,6 @@ html
 
   body
     == render 'layouts/navigation'
-    == render 'layouts/messages'
-    == yield
+    .wrapper
+      == render 'layouts/messages'
+      == yield
