--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,5 @@
-<div class="row">
+<div class="column">
+  <div class="row">
   <div class="col-sm-6 col-sm-offset-3">
     <div class="authform">
       <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post, :role => 'form'}) do |f| %>
@@ -13,4 +14,5 @@
       <% end %>
     </div>
   </div>
+</div>
 </div
