--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="column">
 <div class="row">
   <div class="col-sm-6 col-sm-offset-3">
     <div class="authform">
@@ -13,6 +14,9 @@
         <%= f.email_field :email, class: 'form-control' %>
       </div>
       <div class="form-group">
+        <div class='form-error'>
+          
+        </div>
         <%= f.label :password %>
         <%= f.password_field :password, class: 'form-control' %>
       </div>
@@ -24,4 +28,5 @@
       <% end %>
     </div>
   </div>
+</div>
 </div>
