--- a/app/assets/stylesheets/stylish-portfolio.css.scss
+++ b/app/assets/stylesheets/stylish-portfolio.css.scss
@@ -5,6 +5,7 @@
  */
 
 /* Global Styles */
+@import url(https://fonts.googleapis.com/css?family=Bitter:400,400italic,700);
 
 html,
 body {
@@ -13,7 +14,7 @@ body {
 }
 
 body {
-    font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Bitter","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 .text-vertical-center {
