--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -2,6 +2,7 @@
 <% if user_signed_in? %>
   <li><%= link_to 'Edit account', edit_user_registration_path %></li>
   <li><%= link_to 'Sign out', destroy_user_session_path, :method => 'delete' %></li>
+  <li><%= link_to 'Pay Michael Money', new_charge_path %></li>
   <li><div class="navbar-brand"> Welcome
     <%if current_user.name %>
     ,
