styled the thank you page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,3 +23,13 @@
 .h1,.h2,.h3,.h4{
   font-family: "Rokkitt","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
+
+.spacer{
+  margin-top: 100px;
+  margin-bottom:100px;
+  width: 100%;
+}
+
+.financial{
+  background-color: gray;
+}
