--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,1 +1,10 @@
-<h2>Thanks, you paid <strong><%= number_to_currency(@amount/100) %></strong>!</h2>
+<div class="row">
+  <div class="spacer">
+    <div class="col-sm-6 col-sm-offset-3">
+      <h2 class="text-center">Thanks, you paid Michael <strong><%= number_to_currency(@amount/100) %></strong>!</h2>
+        <div class="text-center">
+          <%= link_to "Return to the Main page", root_path, class: 'btn btn-large btn-success' %>
+        </div>
+    </div>
+  </div>
+</div>
