centered the front end for the payment page

--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,18 +1,34 @@
 <%= form_tag charges_path do %>
-  <article>
-    <% if flash[:error].present? %>
-      <div id="error_explanation">
-        <p><%= flash[:error] %></p>
+<div class="row">
+  <div class="spacer">
+    <div class="col-sm-6 col-sm-offset-3">
+      <div class="text-center">
+        <article>
+          <% if flash[:error].present? %>
+          <div id="error_explanation">
+            <p><%= flash[:error] %></p>
+          </div>
+          <% end %>
+          <label class="amount">
+            <span>Amount: $5.00</span>
+          </label>
+        </article>
       </div>
-    <% end %>
-    <label class="amount">
-      <span>Amount: $5.00</span>
-    </label>
-  </article>
-
-  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="spacer">
+    <div class="col-sm-6 col-sm-offset-3">
+      <div class="text-center">
+        <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
           data-description="A month's subscription"
           data-amount="<%= @amount %>"
-          data-locale="auto"></script>
+          data-locale="auto">
+        </script>
+      </div>
+    </div>
+  </div>
+</div>
 <% end %>
