--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -3,12 +3,9 @@
   <li><%= link_to 'Edit account', edit_user_registration_path %></li>
   <li><%= link_to 'Sign out', destroy_user_session_path, :method => 'delete' %></li>
   <li><%= link_to 'Pay Michael Money', new_charge_path %></li>
-  <li><div class="navbar-brand"> Welcome
-    <%if current_user.name %>
-    ,
-      <%= current_user.name %>
-    <% end  %>
-  </div></li>
+  <%if current_user.name %>
+    <li><div class="navbar-brand"> Welcome,<%= current_user.name %></div></li>
+  <% end  %>
 <% else %>
   <li><%= link_to 'Sign in', new_user_session_path %></li>
   <li><%= link_to 'Sign up', new_user_registration_path %></li>
