--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="form-group">
-    $<%= f.label :purpose %><br>
+    <%= f.label :purpose %><br>
     <%= f.text_field :purpose, class: "form-control" %>
   </div>
   <div class="form-group">
-    $<%= f.label :amount %><br>
+    <%= f.label :amount %> In USD<br>
     <%= f.number_field :amount, class: "form-control" %>
   </div>
   <div class="actions">
