--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -30,6 +30,7 @@
           data-amount="<%= @payment.amount %>"
           data-locale="auto">
         </script>
+        <%= hidden_field_tag(:id,value=@payment.id)%>
       </div>
     </div>
   </div>
