--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -3,6 +3,7 @@
   <li><%= link_to 'Edit account', edit_user_registration_path %></li>
   <li><%= link_to 'Sign out', destroy_user_session_path, :method => 'delete' %></li>
   <li><%= link_to 'Pay Michael Money', new_payment_path %></li>
+  <li><%= link_to 'Blog', posts_path %></li>
   <%if current_user.name %>
     <li><div class="navbar-brand"> Welcome, <%= current_user.name %></div></li>
   <% end  %>
