added a title to the payment processing page

--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title do %>
+  Payment Processing
+<% end %>
 <%= form_tag charges_path do %>
 <div class="row">
   <div class="spacer">
