added a title to the new charges page

--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title do%>
+  Thank You!
+<% end %>
 <div class="row">
   <div class="spacer">
     <div class="col-sm-6 col-sm-offset-3">
