--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
   <div class="col-sm-6 col-sm-offset-3">
     <div class="authform">
-      <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post, :role => 'form'}) do |f| %>
+      <% form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post, :role => 'form'}) do |f| %>
       <h3>Forgot your password?</h3>
       <p>We'll send password reset instructions.</p>
       <%= devise_error_messages! %>
