--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-sm-6 col-sm-offset-3">
     <div class="authform">
-      <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :role => 'form'}) do |f| %>
+      <% form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :role => 'form'}) do |f| %>
       <h3>Sign up</h3>
       <%= devise_error_messages! %>
       <div class="form-group">
@@ -15,7 +15,7 @@
       </div>
       <div class="form-group">
         <div class='form-error'>
-          
+
         </div>
         <%= f.label :password %>
         <%= f.password_field :password, class: 'form-control' %>
