--- a/app/views/posts/index.slim
+++ b/app/views/posts/index.slim
@@ -9,7 +9,7 @@
           = post.title
         h5.text-right
           |Posted on
-          = post.blogdate.strftime('%A, %b %d')
+          = " " + post.blogdate.strftime('%A, %b %d')
         .spacer.text-right
         - if post.image.present?
           = image_tag post.image.url, class: "img-responsive"
