made the signed in user name pull to the right

--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -3,10 +3,11 @@
   <li><%= link_to 'Edit account', edit_user_registration_path %></li>
   <li><%= link_to 'Sign out', destroy_user_session_path, :method => 'delete' %></li>
   <li><%= link_to 'Pay Michael Money', new_payment_path %></li>
+  <li><%= link_to 'Blog', posts_path %></li>
+</ul>
   <%if current_user.name %>
-    <li><div class="navbar-brand"> Welcome, <%= current_user.name %></div></li>
+    <div class="navbar-right navbar-brand"> Welcome, <%= "  " + current_user.name %></div>
   <% end  %>
-    <li><%= link_to 'Blog', posts_path %></li>
 <% else %>
   <li><%= link_to 'Sign in', new_user_session_path %></li>
   <li><%= link_to 'Sign up', new_user_registration_path %></li>
