adding comments to post show page, wip

--- a/app/views/posts/show.slim
+++ b/app/views/posts/show.slim
@@ -15,3 +15,6 @@
       = @post.content
     .text-left
       = link_to 'Back', posts_path, class: 'btn btn-large btn-danger'
+hr
+.spacer.row
+  .col-sm-offset-3.col-sm-6
