allowing for deleting comments, work in progress

--- a/app/views/posts/show.slim
+++ b/app/views/posts/show.slim
@@ -20,6 +20,10 @@ hr
       - @comments.each do |comment|
         p
           = comment.content
+        -if user_signed_in?
+          - if comment.user_id == current_user.id
+            .text-left
+              = link_to 'Delete Comment', comment_destroy(:id => @comment.id), class: 'btn btn-large btn-danger', :method => :delete, :data => { confirm: 'Are you sure?' }
         - if comment.user.name.present?
           p
             = "created by: #{comment.user.name} at #{comment.created_at.strftime("%B %e %Y %I:%M %p")}"
