worked out the routing for delete comments

--- a/app/views/posts/show.slim
+++ b/app/views/posts/show.slim
@@ -23,7 +23,7 @@ hr
         -if user_signed_in?
           - if comment.user_id == current_user.id
             .text-left
-              = link_to 'Delete Comment', comment_destroy(:id => @comment.id), class: 'btn btn-large btn-danger', :method => :delete, :data => { confirm: 'Are you sure?' }
+              = link_to 'Delete Comment', comment_destroy_path(comment) , class: 'btn btn-large btn-danger', :method => :delete, :data => { confirm: 'Are you sure?' }
         - if comment.user.name.present?
           p
             = "created by: #{comment.user.name} at #{comment.created_at.strftime("%B %e %Y %I:%M %p")}"
