rewrote the email message for reset password

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,4 +1,8 @@
-<p>Hello <%= @resource.name %>!</p>
+<% if @resource.name  %>
+  <p>Hello <%= @resource.name %>!</p>
+<% else  %>
+  <p>Hello <%= @resource.email %>!</p>
+<% end  %>
 
 <p> Michael Nash's profile app has received a request to reset a forgotten password. You can do this through the link below.</p>
 
