slight formatting change to the blog index page (thanks Tony)

--- a/app/views/posts/index.slim
+++ b/app/views/posts/index.slim
@@ -15,7 +15,8 @@
         = image_tag post.image.url, class: "img-responsive center-block"
       .spacer
       p.text-left
-        = truncate(post.content, length: 250) {link_to 'Continue', post}
+        = truncate(post.content, length: 250, escape: false ).html_safe
+        = link_to 'Continue', post
       hr
       .spacer
 .row
