massaged stuff until it stopped crashing

--- a/app/views/posts/show.slim
+++ b/app/views/posts/show.slim
@@ -12,7 +12,7 @@
       = image_tag @post.image.url, class: "img-responsive center-block"
     .spacer
     p.text-left
-      = markdown.render(@post.content)
+      = markdown(@post.content)
 hr
 .spacer.row
   .col-sm-offset-3.col-sm-6
