--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -26,6 +26,9 @@
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
           data-description="<%= @payment.purpose  %>"
           data-amount="<%= @payment.amount %>"
+          data-email="<%= current_user.email %>"
+          data-panel-label="Pay Michael"
+          data-label= "Pay Michael Money"
           data-locale="auto">
         </script>
         <%= hidden_field_tag(:id,value=@payment.id)%>
