added button to create automated tweet

--- a/app/views/posts/show.slim
+++ b/app/views/posts/show.slim
@@ -43,6 +43,12 @@ hr
         br
         = f.submit
 
+-if current_user.is_admin
+  .spacer.row
+    .col-sm-offset-3.col-sm-6
+      = link_to 'Back', tweets_path, class: 'btn btn-large btn-success'
+
+
 .col-sm-offset-3.col-sm-6
   .text-left
       = link_to 'Back', posts_path, class: 'btn btn-large btn-danger'
