still a work in progress

--- a/app/views/posts/show.slim
+++ b/app/views/posts/show.slim
@@ -46,7 +46,7 @@ hr
 -if user_signed_in? && current_user.is_admin
   .spacer.row
     .col-sm-offset-3.col-sm-6
-      = link_to 'Back', tweets_path, class: 'btn btn-large btn-success'
+      = link_to 'Tweet this exciting post', create_tweets_path, class: 'btn btn-large btn-success'
 
 
 .col-sm-offset-3.col-sm-6
