updated some of the information in index page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,11 +25,11 @@
             <h2>I am an integration developer at the Tampa office of <a href='https://www.investcloud.com/Membership/Apps/ICBB2WhoWeAre_Input_App.aspx?IX_mId=0'>investCloud</a>.</h2>
             <p class="lead">I am a graduate of The Iron Yard St Petersburg’s Ruby on Rails program. I am also a former academic, with an MA in Chinese History from Columbia and years of travel and language experience around Asia.</p>
             <p class="lead"> Professionally, I work on databases and write scripts that manipulate data and load it into a database for financial services web portals in Java and Groovy.
-              My personal projects include converting this page and my blog into a Rails app, working through the problems on<a href='https://exercism.io'> exercism</a>, and learning the details of Cucumber and Rspec.
+              My personal projects include converting this page and my blog into a Rails app, working through the problems on<a href='https://exercism.io'> exercism</a> (so far I have made the most progress on the ruby and groovy tracks), and learning React.js and Grails.
               I am also working on a suite of csv parsing tools in Python called <a href='https://github.com/utumno86/Asparagus'>Asparagus</a>.
             <p>Programming Languages:</p>
             <ul>
-              <li><a href='https://github.com/utumno86/Programs/blob/master/eight.rb'>Ruby</a></li>
+              <li><a href='https://github.com/utumno86/exercism_exercises/blob/master/ruby/run-length-encoding/run_length_encoding.rb'>Ruby</a></li>
                 <ul>
                   <li>Rails (see examples below)</li>
                   <li><a href='https://github.com/utumno86/CreamOfTheCrop/blob/master/app/views/wrestlers/index.slim'>Slim/Haml</a></li>
@@ -40,7 +40,7 @@
                 <ul>
                   <li><a href='https://github.com/utumno86/bloggertron/blob/master/app/assets/javascripts/application.js'>ajax/JQuery</a></li>
                   <li><a href='https://github.com/utumno86/LearnYouNode/blob/master/juggling.js'>Node.js</a></li>
-                  <li>Angular JS</li>
+                  <li><a href='https://github.com/utumno86/ember-note'>Ember.js</a></li>
                 </ul>
                   <li><a href='https://github.com/utumno86/Asparagus/blob/master/nameeraserconverter.py'>Python</a></li>
                 <ul>
@@ -54,7 +54,16 @@
                 </ul>
               <li>Java</li>
                 <ul>
-                  <li>Groovy</li>
+                  <li><a      href='https://github.com/utumno86/grab_bag/blob/master/brew-cask-update.groovy'>Groovy</a></li>
+                </ul>
+              <li> Dev Ops</li>
+                <ul>
+                  <li><a
+                    href='https://github.com/utumno86/grab_bag/blob/master/brew-cask-update.sh'>Shellscript</a>
+                  </li>
+                  <li>
+                    <a href = 'https://github.com/utumno86/grab_bag/blob/master/awkcommands.awk'>Awk</a>
+                  </li>
                 </ul>
             </ul>
             <p>I am also proficient in SQL, using Oracle and Postgres databases, Git, deployment to Heroku, as well as in Chinese langauge, history, and economics topics.</p>
@@ -75,7 +84,7 @@
                 <h3>Cream of the Crop</h3>
                 <h6>Iron Yard Final Project</h6>
                 <h6>The most interesting bit is match generation <a href="https://github.com/utumno86/CreamOfTheCrop/blob/master/app/models/match.rb"> here.</a></h6>
-                <a href="http://michaelenash.com/">
+                <a href="http://creamofthecrop.herokuapp.com/">
                   <%= image_tag 'portfolio-1.png', class: "img-portfolio img-responsive"%>
                 </a>
               </div>
