updated the main page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@
     <a href="#contact" class="btn btn-dark btn-lg">Contact Me</a>
     <br>
     <br>
-    <a href="https://s3.amazonaws.com/nashresume/MichaelNashProfile.pdf" class="btn btn-dark btn-lg">My Resume(PDF)</a>
+    <a href="https://s3.amazonaws.com/nashresume/Resumev7.pdf" class="btn btn-dark btn-lg">My Resume(PDF)</a>
   </div>
 </header>
 
@@ -109,15 +109,15 @@
                   </a>
                 </div>
               </div>
-              <div class="col-md-6">
-                <div class="portfolio-item">
-                  <h3>To Do Lists</h3>
-                  <h6>An Iron Yard Project</h6>
-                  <h6> The most interesting bit is my hand-rolled search module<a href="https://github.com/utumno86/todolist/blob/master/app/models/concerns/searchable.rb"> here.</a></h6>
-                  <a href="http://todos-86.herokuapp.com/">
-                    <%= image_tag 'portfolio-4.jpg', class: "img-portfolio img-responsive"%>
+            </div>
+            <div class="col-md-6">
+              <div class="portfolio-item">
+                <h3>Ryma -- Luggage Tracking</h3>
+                  <h6>Built for Hack Hospitality Hackathon August 2017</h6>
+                  <h6> Check out the rails 5 API<a href="https://github.com/utumno86/ryma/blob/master/app/controllers/api/guests_controller.rb"> here.</a></h6>
+                  <a href="http://ryma.herokuapp.com/">
+                  <img class="img-portfolio img-responsive" src="img/portfolio-4.png">
                   </a>
-                </div>
               </div>
             </div>
           </div>
@@ -162,7 +162,7 @@
               <li><a href="https://www.linkedin.com/in/michaelearlnash"><i class="fa fa-linkedin fa-fw fa-3x"></i></a></li>
             </ul>
             <hr class="small">
-            <p class="text-muted">Copyright &copy; Michael E. Nash 2016</p>
+            <p class="text-muted">Copyright &copy; Michael E. Nash 2017</p>
           </div>
         </div>
       </div>
