--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -109,14 +109,13 @@
                   </a>
                 </div>
               </div>
-            </div>
             <div class="col-md-6">
               <div class="portfolio-item">
                 <h3>Ryma -- Luggage Tracking</h3>
                   <h6>Built for Hack Hospitality Hackathon August 2017</h6>
                   <h6> Check out the rails 5 API<a href="https://github.com/utumno86/ryma/blob/master/app/controllers/api/guests_controller.rb"> here.</a></h6>
                   <a href="http://ryma.herokuapp.com/">
-                  <img class="img-portfolio img-responsive" src="img/portfolio-4.png">
+                  <%= image_tag 'portfolio-4.png', class: "img-portfolio img-responsive"%>
                   </a>
               </div>
             </div>
