updated api info

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,7 +34,7 @@
                   <li>Rails (see examples below)</li>
                   <li><a href='https://github.com/utumno86/CreamOfTheCrop/blob/master/app/views/wrestlers/index.slim'>Slim/Haml</a></li>
                   <li><a href='https://github.com/utumno86/the_rspec_book/blob/master/code_breaker/spec/marker_spec.rb'>RSpec</a></li>
-                  <li>JSON APIs</li>
+                  <li><a href="https://github.com/utumno86/ryma/blob/master/app/controllers/api/guests_controller.rb">JSON APIs</a></li>
                 </ul>
               <li><a href='https://github.com/utumno86/exercism_exercises/blob/master/javascript/anagram/anagram.js'>Javascript</a></li>
                 <ul>
