updated the copyright page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -161,7 +161,7 @@
               <li><a href="https://www.linkedin.com/in/michaelearlnash"><i class="fa fa-linkedin fa-fw fa-3x"></i></a></li>
             </ul>
             <hr class="small">
-            <p class="text-muted">Copyright &copy; Michael E. Nash 2017</p>
+            <p class="text-muted">Copyright &copy; Michael E. Nash <%= Date.today.year %></p>
           </div>
         </div>
       </div>
