updated main page info

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,7 +22,7 @@
       <%= image_tag 'callout.jpg', class: "img-responsive profile"%>
         <div class="row">
           <div class="col-lg-12 text-left">
-            <h2>I am an integration developer at the Tampa office of <a href='https://www.investcloud.com/Membership/Apps/ICBB2WhoWeAre_Input_App.aspx?IX_mId=0'>investCloud</a>.</h2>
+            <h2>I am an Software Engineer at <a href='http://www.spatialnetworks.com/'>Spatial Networks</a>, where I work on <a href='http://www.fulcrumapp.com'> Fulcrum</a>.</h2>
             <p class="lead">I am a graduate of The Iron Yard St Petersburg’s Ruby on Rails program. I am also a former academic, with an MA in Chinese History from Columbia and years of travel and language experience around Asia.</p>
             <p class="lead"> Professionally, I work on databases and write scripts that manipulate data and load it into a database for financial services web portals in Java and Groovy.
               My personal projects include converting this page and my blog into a Rails app, working through the problems on<a href='https://exercism.io'> exercism</a> (so far I have made the most progress on the ruby and groovy tracks), and learning React.js and Grails.
